--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "@slidev/cli": "^0.40.3",
-    "@slidev/theme-apple-basic": "^0.20.0"
+    "@slidev/theme-apple-basic": "^0.20.0",
+    "help": "^3.0.2",
+    "playwright-chromium": "^1.31.2"
   }
 }
