--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Build pages
-        run: slidev build --download --with-clicks
+        run: slidev build  --base '/slidev-the-power/'
       - name: Setup pages
         uses: actions/configure-pages@v3
       - name: Upload pages
