--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@slidev/cli": "^0.40.3",
     "@slidev/theme-apple-basic": "^0.20.0",
+    "@slidev/theme-default": "^0.21.2",
     "help": "^3.0.2",
     "playwright-chromium": "^1.31.2"
   }
